[gd_scene load_steps=15 format=3 uid="uid://bnt6fh6ndihdl"]

[ext_resource type="Script" path="res://Scripts/Controllers/WorldController.gd" id="1_rfg43"]
[ext_resource type="PackedScene" uid="uid://djnyy262e778e" path="res://Scenes/Player.tscn" id="2_21pou"]
[ext_resource type="Script" path="res://Scripts/Menu/Menu.gd" id="7_pdbvl"]
[ext_resource type="Texture2D" uid="uid://dianihvujteoj" path="res://Assets/Sprites/LoadButton.png" id="8_nq7xy"]
[ext_resource type="Script" path="res://Scripts/Menu/MenuButton.Load.gd" id="9_sfc7d"]
[ext_resource type="Script" path="res://Scripts/Menu/MenuButton.Save.gd" id="10_fah2v"]
[ext_resource type="Script" path="res://Scripts/Menu/MenuButton.Quit.gd" id="11_u50i4"]
[ext_resource type="Texture2D" uid="uid://beslko0tx1ent" path="res://Assets/Sprites/DialogueBox.png" id="12_dulvy"]
[ext_resource type="Script" path="res://Scripts/Dialog/DialogBox.gd" id="13_1hltd"]
[ext_resource type="Texture2D" uid="uid://pvybvw7sar85" path="res://Assets/Sprites/DialogueBoxOptions.png" id="14_xphs7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kh5kr"]
texture = ExtResource("12_dulvy")

[sub_resource type="LabelSettings" id="LabelSettings_3hyej"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cywsl"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ahk17"]
texture = ExtResource("14_xphs7")

[node name="World" type="Node3D"]
script = ExtResource("1_rfg43")

[node name="Player" parent="." instance=ExtResource("2_21pou")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.108002, 0)

[node name="MenuUI" type="CanvasLayer" parent="."]
process_mode = 2
script = ExtResource("7_pdbvl")

[node name="MenuPanel" type="Control" parent="MenuUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI/MenuPanel"]
layout_mode = 0
offset_left = 436.0
offset_top = 207.0
offset_right = 796.0
offset_bottom = 387.0

[node name="LoadButton" type="TextureButton" parent="MenuUI/MenuPanel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_nq7xy")
script = ExtResource("9_sfc7d")

[node name="SaveButton" type="Button" parent="MenuUI/MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Save"
script = ExtResource("10_fah2v")

[node name="QuitButton" type="Button" parent="MenuUI/MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Quit"
script = ExtResource("11_u50i4")

[node name="DialogBox" type="Panel" parent="."]
offset_right = 1151.0
offset_bottom = 647.0
theme_override_styles/panel = SubResource("StyleBoxTexture_kh5kr")
script = ExtResource("13_1hltd")

[node name="NameContainer" type="MarginContainer" parent="DialogBox"]
layout_mode = 0
offset_left = 202.0
offset_top = 432.0
offset_right = 488.0
offset_bottom = 459.0
scale = Vector2(1, 1.16)
pivot_offset = Vector2(6, 2)
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 16

[node name="NameText" type="Label" parent="DialogBox/NameContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Hello
"
label_settings = SubResource("LabelSettings_3hyej")
clip_text = true

[node name="DialogContainer" type="MarginContainer" parent="DialogBox"]
layout_mode = 0
offset_left = 202.0
offset_top = 471.0
offset_right = 1115.0
offset_bottom = 624.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="DialogText" type="Label" parent="DialogBox/DialogContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 1
text = "Hello, this is a test"
label_settings = SubResource("LabelSettings_cywsl")
autowrap_mode = 2

[node name="DialogOptionsBox" type="Panel" parent="DialogBox"]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 643.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ahk17")

[node name="DialogOptionsContainer" type="VBoxContainer" parent="DialogBox/DialogOptionsBox"]
layout_mode = 0
offset_left = 529.0
offset_top = 354.0
offset_right = 1103.0
offset_bottom = 452.0

[node name="SceneRoot" type="Node3D" parent="."]
